src/test/deca/syntax/invalid/test_synt2.deca
//Resultat:Erreur syntaxique : & qui manque dans &&
{
	if ( true & 5.0 ){
	   println("this text shouldn't be printed");
	}
}
